--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,8 @@
     <string name="tab_next_days">Next Days</string>
     <string name="title_activity_settings">Settings</string>
 
+    <string name="no_location_found">no location</string>
+
     <!-- Strings related to Settings -->
     <!--Key name for storing location in SharedPreferences-->
     <string name="pref_location_key">location</string>
@@ -24,6 +26,9 @@
 
     <string name="pref_temp_units_title">Unit</string>
     <string name="pref_temp_units_key">units</string>
+    <string name="pref_temp_units_default">metric</string>
+    <string name="temperature_metrics">metric</string>
+    <string name="temperature_imperial">imperial</string>
     <string-array name="pref_temperature_unit_titles">
         <item>Celsius</item>
         <item>Fahrenheit</item>
