--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,7 @@
 
     <!-- Strings related to Settings -->
     <!--Key name for storing location in SharedPreferences-->
+    <string name="pref_last_location_key">lastLocation</string>
     <string name="pref_location_key">location</string>
     <string name="pref_location_title">Location</string>
     <string name="pref_location_default">Stockholm</string>
